@@ -1,3 +1,12 @@
+2011-12-15  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/51550
+	PR fortran/47545
+	PR fortran/49050
+	PR fortran/51075
+	* resolve.c (resolve_fl_derived0): Print not-implemented error
+	for deferred-length character components.
+
 2011-12-11  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/50923
